# ev_registration_bot

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001-m1zmu2n.edgeql
ev_registration_bot/: bot_main.py  config.py
ev_registration_bot/edge_helper/: connection.py
ev_registration_bot/google_calendar_helper/: google_calendar_create.py  google_calendar_get.py  token_recreate.py  utils.py
