[tool.poetry]
name = "ev-registration-bot"
version = "0.1.0"
description = ""
authors = ["Stanislav <goncharuk.sm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.128.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
